# VPG-Intelligence-Digest

./: .env.example  .gitignore  BRIEF.md  CLAUDE.md  Dockerfile  V2.1_CLAUDE_CODE_BRIEF.md  V2.4_Enhancement_Brief.md  V2.4_Mockups.pptx  V2_CLAUDE_CODE_BRIEF.md  VPG_V2.1_Management_Presentation.pptx  docker-compose.yml  pyproject.toml  requirements.txt
config/: accounts.json  business-units.json  competitors.json  credentials.example.json  credentials.json  events.json  industries.json  keywords.json  partners.json  procurement_codes.json  products.json  recipients.json  scoring-weights.json  sources.json
data/: schema.sql
data/mock-digests/: digest-2026-W08.html
scripts/: dry_run.py  entrypoint.sh  migrate_v2_1.py  reddit_diagnose.py  scheduler.py  send_digest.py  test_smtp_local.py
src/: __init__.py  config.py  db.py  pipeline.py  scheduler.py
src/analyzer/: __init__.py  battle_cards.py  client.py  cross_bu.py  customer_triggers.py  keyword_discovery.py  pattern_detector.py  prompts.py  recommendations.py  roi_links.py  scorer.py
src/api/: __main__.py  auth.py  backup.py  server.py
src/collector/: __init__.py  reddit_collector.py  rss_collector.py  source_health.py  trends_collector.py  web_scraper.py
src/composer/: __init__.py  composer.py  pdf_generator.py
src/delivery/: __init__.py  auth.py  gmail.py  health.py  monitoring.py
templates/: digest.html
tests/: __init__.py  test_analyzer.py  test_config.py  test_db.py  test_delivery.py  test_e2e_v2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_scorer.py
(+43 files in other folders)
